# TradeSim

./: .gitignore  CMakeLists.txt  trade-sim.cpp  trade-sim.h
data/: sample.csv
include/engine/: BacktestEngine.hpp
include/market/: Bar.hpp  CsvMarketDataSource.hpp
include/strategy/: MovingAverageCrossStrategy.hpp  Signal.hpp  Strategy.hpp
include/trading/: PaperBroker.hpp  Portfolio.hpp  Trade.hpp
src/: BacktestEngine.cpp  CsvMarketDataSource.cpp  MovingAverageCrossStrategy.cpp  PaperBroker.cpp  Portfolio.cpp  main.cpp
tests/: BrokerTests.cpp  PortfolioTests.cpp  StrategyTests.cpp
